--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,47 +1,41 @@
-/* Reset default margin and padding */
-body, h1, form, button {
-  margin: 0;
-  padding: 0;
-}
-
-/* Set a background color and text color */
-body {
-  background-color: #f0f0f0;
-  font-family: Arial, sans-serif;
-}
-
-/* Style the header */
 header {
-  background-color: #007bff;
-  color: #fff;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  height: 60px; /* Set a fixed height for the header */
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 0;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
-/* Style the header columns */
-#header_left,
+/** Style the header columns */
+#header_left{
+    text-align:center;
+    display: flex;
+    align-items:center;
+    justify-content: flex-start;
+    padding-left: 30px;
+}
+#header_center{
+    text-align:right;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+}
 #header_right {
-  text-align: center;
-  display: flex;
-  align-items: center;
-}
-
-#header_center {
-  justify-content: center; /* Center horizontally */
+    text-align:center;
+    display: flex;
+    align-items:center;
+    justify-content: flex-end;/* Align to the right side */
+    padding-right: 30px
 }
 
 header a {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 10px;
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
 }
+
 
 #logo {
   max-width: 100px;
@@ -49,31 +43,19 @@ header a {
   margin: 0 auto;
 }
 
-/* Style the content area */
+/* Reset default margin and padding */
+body, h1, h2, h4, form, label, input, a {
+  margin-top: 0;
+  padding: 0;
+}
+
+/* Set a background color and text color */
 body {
-  margin-top: 70px; /* Create space below the fixed header */
-  text-align: center;
+  background-color: #fff;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-
-h1 {
-  font-size: 24px;
-  margin: 20px 0;
-  color: #333;
-}
-
-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  margin: 5px;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-/* Add more specific styles for your admin page elements as needed */
