--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,3 +1,20 @@
+/* Reset default margin and padding */
+body, h1, h2, h4, form, label, input, a {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #f3f3f3; /* Change the background color to a lighter shade */
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Use min-height instead of height to handle content overflow */
+    margin: 0;
+}
+
 header {
     background-color: #007bff;
     color: #fff;
@@ -36,26 +53,45 @@ header a {
     margin: 0 10px;
 }
 
-
+/* Logo style */
 #logo {
-  max-width: 100px;
-  display: block;
-  margin: 0 auto;
+    max-width: 100px;
+    display: block;
+    margin: 0 auto;
 }
 
-/* Reset default margin and padding */
-body, h1, h2, h4, form, label, input, a {
-  margin-top: 0;
-  padding: 0;
+.container {
+    margin-top: 70px; /* To create space below the fixed header */
 }
 
-/* Set a background color and text color */
-body {
-  background-color: #fff;
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+h2 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+#welcome {
+    margin-top: 40px;
+}
+
+
+
+.table {
+    margin: 20px 0;
+    border: 1px solid #ddd;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table th, .table td {
+    padding: 8px 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.table th {
+    background-color: #f5f5f5;
 }
