--- a/web/jspf/Header.jspf
+++ b/web/jspf/Header.jspf
@@ -18,7 +18,7 @@
                 <a href="profile">Hello ${user.firstName}</a>
                 <a href="login">Logout</a>
             </c:if>
-            <a href="CartServlet?action=view" class="btn btn-warning">
+            <a href="cart?action=view" class="btn btn-warning">
                 <i class="fas fa-shopping-cart"></i> View Cart
             </a>
         </div>
