--- a/web/jspf/Header.jspf
+++ b/web/jspf/Header.jspf
@@ -1,7 +1,7 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ page pageEncoding="UTF-8" %>
-<header>
+<header class="mainHeader">
     <div class="row" id="header_row">
         <div class="col-4" id="header_left">
             <a href="home">WeldedScrap</a>
@@ -15,10 +15,13 @@
                 <a href="register">Register</a>
             </c:if>
             <c:if test = "${user != null}">
+                <c:if test = "${user.roleId.getRoleId() == 1}">
+                <a href="admin">Admin</a>
+                </c:if>
                 <a href="profile">Hello ${user.firstName}</a>
                 <a href="login">Logout</a>
             </c:if>
-            <a href="CartServlet?action=view" class="btn btn-warning">
+            <a href="cart?action=view" class="btn btn-warning">
                 <i class="fas fa-shopping-cart"></i> View Cart
             </a>
         </div>
