--- a/web/css/item.css
+++ b/web/css/item.css
@@ -1,20 +1,54 @@
 body {
-    font-family: Arial, sans-serif;
     background-color: #f3f3f3;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+
+}
+
+.container-fluid {
+    width: 100%; /* Adjust the width based on your design */
+    /*max-width: 1200px;  Optional: Set a maximum width for larger screens */
+    /*min-height: 80vh;  Minimum height to ensure content is visible */
+    /*padding-top: 20px;*/
+    background-image: url("../images/products.jpg");
+    background-size: cover;
+    margin-top: 50px;
+}
+
+#itemCol {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    background-color:#ddd;
+    margin-left: 180px;
+    margin-right: 180px;
+    margin-bottom: 20px;
+}
+
+#itemRow {
+    justify-content: center;
 }
 
 h1 {
     font-size: 28px;
-    color: #007bff;
     margin: 20px 0;
+    display: flex;
+}
+
+#title{
+    margin-top: 100px;
+    color:#fff;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 img {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 200%; /* Make images responsive within their container */
+    height: auto; /* Maintain aspect ratio */
     margin: 20px 0;
 }
 
@@ -35,4 +69,22 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+#cartForm {
+    margin-top: 20px;
+}
+
+footer {
+    background-color: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    bottom: 0;
+    width: 100%;
+}
+
+#header {
+    color:#fff;
+    margin-top: 50px;
 }
