--- a/web/css/shop.css
+++ b/web/css/shop.css
@@ -8,14 +8,33 @@ body {
     min-height: 100vh;
     margin: 0;
 }
+#hero {
+    padding-top: 220px;
+    margin-top: 120px;
+    background-image: url("../images/weld.jpg");
+    background-size: cover;
+    background-position-y: -400px;
+    text-align: center;
+    color: #f3f3f3;
+    font-size: 3em; /* Adjust the font size as needed */
+    margin-bottom: 20px; /* Adjust the margin based on your design */
+    min-height: 70vh;
+}
+
+#heroMessage {
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 .container {
-    margin-top: 500px;
+    width: 80%; /* Adjust the width based on your design */
+    max-width: 1200px; /* Optional: Set a maximum width for larger screens */
+    min-height: 80vh; /* Minimum height to ensure content is visible */
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 80px;
+    padding-bottom: 20px;
 }
 
 ul.row {
@@ -62,6 +81,16 @@ li.col-4 {
     width: 100%;
 }
 
+footer {
+    background-color: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    bottom: 0;
+    width: 100%;
+}
+
+
 @media (max-width: 760px) {
     li.col-4 {
         flex: 0 0 100%;
@@ -73,3 +102,4 @@ li.col-4 {
         flex: 0 0 48%; /* Adjusted width for two items per row on tablets */
     }
 }
+
