--- a/web/css/register.css
+++ b/web/css/register.css
@@ -1,18 +1,20 @@
 /* Reset default margin and padding */
 body, h1, form {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 /* Set a background color and text color */
 body {
-  background-color: #f0f0f0;
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center horizontally and vertically */
-  align-items: center;
-  height: 100vh;
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally and vertically */
+    align-items: center;
+    height: 100vh;
+    background-image: url("../images/weldedRegister.jpg");
+    background-size: cover;
 }
 
 /* Style the header */
@@ -24,6 +26,11 @@ header {
     position: fixed;
     top: 0;
     z-index: 1;
+}
+
+.container-fluid {
+    margin-top: 120px;
+    min-height: 80vh;
 }
 
 /** Style the header columns */
@@ -55,66 +62,90 @@ header a {
 }
 
 #logo {
-  max-width: 100px;
-  display: block;
-  margin: 0 auto;
+    max-width: 100px;
+    display: block;
+    margin: 0 auto;
 }
 
 /* Style the h1 element */
 h1 {
-  text-align: center;
-  color: #333;
-  margin-top: 20px;
+    text-align: center;
+    color: #333;
+    margin-top: 20px;
+}
+
+#topRow {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Style the form container */
 form {
-  background-color: #ccc; /* Grey background */
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
-  max-width: 100%;
-  text-align: center;
-  margin-top: 70px; /* Create space below the fixed header */
+    background-color: #ccc; /* Grey background */
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    max-width: 100%;
+    text-align: center;
+    margin-top: 70px; /* Create space below the fixed header */
 }
 
 /* Style the form elements */
 form input[type="text"],
 form input[type="password"] {
-  width: 100%; /* Make the inputs fill the entire width */
-  padding: 10px;
-  margin: 8px 0;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  outline: none;
+    width: 100%; /* Make the inputs fill the entire width */
+    padding: 10px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    outline: none;
 }
 
 /* Style the submit button */
 form input[type="submit"] {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  width: 100%; /* Make the button fill the entire width */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100%; /* Make the button fill the entire width */
 }
 
 form input[type="submit"]:hover {
-  background-color: #0056b3;
+    background-color: #0056b3;
 }
 
 /* Style the link */
 a {
-  display: block;
-  text-align: center;
-  margin-top: 10px;
-  color: #007bff;
-  text-decoration: none;
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    color: #007bff;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
+}
+
+#titleID {
+    color: white;
+}
+
+@media (max-width: 760px) {
+    li.col-4 {
+        flex: 0 0 100%;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1200px) {
+    li.col-4 {
+        flex: 0 0 48%; /* Adjusted width for two items per row on tablets */
+    }
 }
