--- a/web/css/user.css
+++ b/web/css/user.css
@@ -119,4 +119,19 @@ body > a:hover {
 .container-fluid {
     background-image: url("../images/welding1.jpg");
     background-size: cover;
+    margin-top: 120px;
+    min-height: 80vh;
+
+}
+
+@media (max-width: 760px) {
+    li.col-4 {
+        flex: 0 0 100%;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1200px) {
+    li.col-4 {
+        flex: 0 0 48%; /* Adjusted width for two items per row on tablets */
+    }
 }
