--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,12 +1,12 @@
 /* Reset default margin and padding */
-body, h1, h2, h4, form, label, input, a {
+body, h1, form {
     margin: 0;
     padding: 0;
 }
 
 /* Set a background color and text color */
 body {
-    background-color: #fff;
+    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -16,6 +16,7 @@ body {
     background-image: url("../images/weldedLogin.jpg");
     background-size: cover;
 }
+
 /* Style the header */
 header {
     background-color: #007bff;
@@ -25,6 +26,11 @@ header {
     position: fixed;
     top: 0;
     z-index: 1;
+}
+
+.container-fluid {
+    margin-top: 120px;
+    min-height: 80vh;
 }
 
 /** Style the header columns */
@@ -55,6 +61,27 @@ header a {
     margin: 0 10px;
 }
 
+#logo {
+    max-width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+/* Style the h1 element */
+h1 {
+    text-align: center;
+    color: #333;
+    margin-top: 20px;
+}
+
+#topRow {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Style the form container */
 form {
     background-color: #ccc; /* Grey background */
@@ -67,22 +94,9 @@ form {
     margin-top: 70px; /* Create space below the fixed header */
 }
 
-#logo {
-    max-width: 100px;
-    display: block;
-    margin: 0 auto;
-}
-
 /* Style the form elements */
-label {
-    display: block;
-    text-align: left;
-    margin: 8px 0;
-    color: #333;
-}
-
-input[type="text"],
-input[type="password"] {
+form input[type="text"],
+form input[type="password"] {
     width: 100%; /* Make the inputs fill the entire width */
     padding: 10px;
     margin: 8px 0;
@@ -92,7 +106,7 @@ input[type="password"] {
 }
 
 /* Style the submit button */
-input[type="submit"] {
+form input[type="submit"] {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -101,21 +115,10 @@ input[type="submit"] {
     cursor: pointer;
     transition: background-color 0.3s;
     width: 100%; /* Make the button fill the entire width */
-    margin-top: 10px;
 }
 
-input[type="submit"]:hover {
+form input[type="submit"]:hover {
     background-color: #0056b3;
-}
-
-/* Style the h1 element */
-h1, h2 {
-    text-align: center;
-    margin-top: 20px;
-}
-
-#loginT {
-    color: white;
 }
 
 /* Style the link */
@@ -129,6 +132,10 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+#titleID {
+    color: white;
 }
 
 @media (max-width: 760px) {
