--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -13,6 +13,8 @@ body {
     align-items: center;
     min-height: 100vh; /* Use min-height instead of height to handle content overflow */
     margin: 0;
+    background-image: url("../images/WeldedAdmin.jpg");
+    background-size: cover;
 }
 
 header {
@@ -60,23 +62,23 @@ header a {
     margin: 0 auto;
 }
 
-.container {
-    margin-top: 70px; /* To create space below the fixed header */
+.container-fluid {
+    margin-top: 120px;
+    width: 80%; /* Adjust the width based on your design */
+    max-width: 1200px; /* Optional: Set a maximum width for larger screens */
+    min-height: 80vh; /* Minimum height to ensure content is visible */
 }
 
-h2 {
+.h2 {
     margin-top: 40px;
     margin-bottom: 40px;
 }
 
-h1 {
+#welcome {
     text-align: center;
     margin-bottom: 40px;
+    color:#fff;
 }
-#welcome {
-    margin-top: 40px;
-}
-
 
 
 .table {
@@ -94,4 +96,27 @@ h1 {
 
 .table th {
     background-color: #f5f5f5;
+}
+
+@media (max-width: 760px) {
+    li.col-4 {
+        flex: 0 0 100%;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1200px) {
+    li.col-4 {
+        flex: 0 0 48%; /* Adjusted width for two items per row on tablets */
+    }
+}
+
+#tableCol {
+    background-color:#ddd;
+    border-radius: 7px;
+}
+
+#butt {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
