--- a/web/css/item.css
+++ b/web/css/item.css
@@ -2,16 +2,15 @@ body {
     background-color: #f3f3f3;
     font-family: Arial, sans-serif;
     min-height: 100vh;
+    background-image: url("../images/products.jpg");
+    background-size: cover;
 
 }
 
 .container-fluid {
     width: 100%; /* Adjust the width based on your design */
-    /*max-width: 1200px;  Optional: Set a maximum width for larger screens */
-    /*min-height: 80vh;  Minimum height to ensure content is visible */
-    /*padding-top: 20px;*/
-    background-image: url("../images/products.jpg");
-    background-size: cover;
+    max-width: 1200px;
+    min-height: 80vh;   
     margin-top: 50px;
 }
 
@@ -25,6 +24,8 @@ body {
     margin-left: 180px;
     margin-right: 180px;
     margin-bottom: 20px;
+    border-radius: 7px;
+    padding-bottom: 10px
 }
 
 #itemRow {
@@ -32,13 +33,11 @@ body {
 }
 
 h1 {
-    font-size: 28px;
     margin: 20px 0;
     display: flex;
 }
 
 #title{
-    margin-top: 100px;
     color:#fff;
     justify-content: center;
     align-items: center;
@@ -73,18 +72,22 @@ button:hover {
 
 #cartForm {
     margin-top: 20px;
-}
-
-footer {
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    bottom: 0;
-    width: 100%;
+    background-color: transparent;
 }
 
 #header {
     color:#fff;
     margin-top: 50px;
+}
+
+@media (max-width: 760px) {
+    li.col-4 {
+        flex: 0 0 100%;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 1200px) {
+    li.col-4 {
+        flex: 0 0 48%; /* Adjusted width for two items per row on tablets */
+    }
 }
