--- a/web/css/login.css
+++ b/web/css/login.css
@@ -90,7 +90,7 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     max-width: 100%;
-    text-align: center;
+    text-align: left;
     margin-top: 70px; /* Create space below the fixed header */
 }
 
