--- a/web/css/Header.css
+++ b/web/css/Header.css
@@ -125,3 +125,12 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.cart-count {
+    position: relative;
+    background-color: red; 
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 0.75em;
+}
