--- a/web/css/shop.css
+++ b/web/css/shop.css
@@ -11,14 +11,25 @@ body {
 #hero {
     padding-top: 220px;
     margin-top: 120px;
-    background-image: url("../images/weld.jpg");
+    background-image: url("../images/herovideo.gif");
     background-size: cover;
-    background-position-y: -400px;
     text-align: center;
     color: #f3f3f3;
     font-size: 3em; /* Adjust the font size as needed */
     margin-bottom: 20px; /* Adjust the margin based on your design */
     min-height: 70vh;
+}
+#content, #content2 {
+    font-size: 2em;
+    text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: auto;
+  padding: 20px;
+}
+
+#content2 {
+    font-size: 1em;
 }
 
 #heroMessage {
