--- a/web/css/login.css
+++ b/web/css/login.css
@@ -138,6 +138,10 @@ a:hover {
     color: white;
 }
 
+#success {
+    background: rgba(0, 0, 0, 0.5);
+}
+
 @media (max-width: 760px) {
     li.col-4 {
         flex: 0 0 100%;
